# comfyui_stereoscopic

./: .gitignore  AGENT_NOTES_TESTING.md  LICENSE  README.md  SECURITY.md  __init__.py  batch_out2.txt  daemon.bat  daemon.cmd  daemon.sh  err.txt  node_dependencies.txt  pyproject.toml  requirements.txt  restart_gui.bat  restart_gui.cmd
.github/: README_copilot_moved.md
.github/memories/: README.md  comfyui_logwatch.md  git_shell_preference.md  never_change_running_system.md  repo_rules.md  session_memory_policy.md
.github/prompts/: init.prompt.md  onboarding.prompt.md
alexa/: README.txt  README_QUICKSTART.txt
api/: README.TXT  batch_all.sh  batch_caption.sh  batch_concat.sh  batch_downscale.sh  batch_dubbing.sh  batch_dubbing_music.sh  batch_dubbing_sfx.sh  batch_interpolate.sh  batch_make_slideshow.sh  batch_makeslideshow.sh  batch_prepare_slides.sh  batch_rescale.sh  batch_sbsconverter.sh  batch_scaling.sh  batch_single_loop.sh  batch_singleloop.sh  batch_starloop.sh  batch_tasks.sh  batch_upscale.sh  batch_watermark_decrypt.sh  batch_watermark_encrypt.sh  clear.sh  compute_fs_status.py  daemon.sh  forward.sh  i2i_sbs_converter.py  i2i_sbs_converter.sh  i2i_sbs_converter_cli.sh  i2i_upscale_downscale.sh  lib_forward.sh  lib_fs.sh  prerequisites.sh  restart_gui.sh  status.sh  uml_build_definition.sh  uml_generate_image.sh  v2m_dubbing.sh  v2v_dubbing.py  v2v_dubbing.sh  (+19 more)
config/: default_autoforward-template.yaml  default_autoforward.yaml
example_workflows/: FI2V Wan2.2 Pipeline-Injector.json  FI2V Wan22 Pipeline-Injector.json  FLI2V Wan2.2 Pipeline-Injector.json  FLI2V Wan22 Pipeline-Injector.json  I2I SBS Depth-Analysis.json  I2I SBS-Converter.json  I2I Watermark-Analysis.json  I2I_SBS_Converter.json  T2I SD1.5 CPU-only Pipeline-Injector.json  T2I SD3.5 Pipeline-Injector.json  T2I SDXL Pipeline-Injector.json  T2I Wan2.2 Pipeline-Injector.json  T2I Wan22 Pipeline-Injector.json
examples/: I2I_Watermark_Decrypt.json  I2T_Caption.json  V2V_Dubbing.json  V2V_Outpaint.json  V2V_Outpaint_Start.json  V2V_Upscale_Downscale.json
gui/: restart.sh
installer/: VrWeAre-Installer.bat
memories/: preferred_language.md
tests/: __init__.py  make_testgrid.py  run_tests.sh  test_alpha_packer.sh  test_comfyui_logwatch.py  test_comfyui_stereoscopic.py  test_triton.py
tools/: faststart.ps1  opencv_compat_test.py
utility_scripts/: detectscenes.sh
(+261 files in other folders)
