
[project]
name = "comfyui_stereoscopic"
version = "2.2.3"
description = "VR we are! Tool, nodes and workflows to create stereoscopic images and movies. "
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [ "torch", "opencv-python>=4.7.0.72", "numpy", "pillow", "googletrans" ]

[project.urls]
Repository = "https://github.com/FortunaCournot/comfyui_stereoscopic"
Documentation = "https://www.3d-gallery.org/"

[tool.comfy]
PublisherId = "fortunacournot"
DisplayName = "VR we are"
Icon = "https://raw.githubusercontent.com/FortunaCournot/comfyui_stereoscopic/refs/heads/main/docs/icon/VR2.png"
Banner = "https://raw.githubusercontent.com/FortunaCournot/comfyui_stereoscopic/refs/heads/main/docs/icon/banner.png"
