
[project]
name = "comfyui_stereoscopic"
version = "3.0.2"
description = 'VR we are! Tool, nodes and workflows to create stereoscopic images and movies. <a href="http://www.3d-gallery.org/">http://www.3d-gallery.org/"</a>'
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.12"
dependencies = [ "torch", "opencv-python>=4.7.0.72", "numpy", "pillow", "googletrans" ]

[project.urls]
Repository = "https://github.com/FortunaCournot/comfyui_stereoscopic"
Documentation = "https://www.3d-gallery.org/"
"Bug Tracker" = "https://github.com/FortunaCournot/comfyui_stereoscopic/issues"

[tool.comfy]
PublisherId = "fortunacournot"
DisplayName = "VR we are"
Icon = "https://raw.githubusercontent.com/FortunaCournot/comfyui_stereoscopic/refs/heads/main/docs/icon/VR2.png"
Banner = "https://raw.githubusercontent.com/FortunaCournot/comfyui_stereoscopic/refs/heads/main/docs/icon/banner.png"
